package Commande.Bottin;

public interface Commande {
	public abstract boolean faire();
	public abstract void defaire();
	public abstract void refaire();
}
